fixed layout problems

--- a/abyss/static_files/css/abyss.css
+++ b/abyss/static_files/css/abyss.css
@@ -13,6 +13,10 @@ ul.no-style {
 	background-color: #222233;
 }
 
+.content {
+	padding-bottom: 5px;
+}
+
 .content.span9 {
 	float: right;
 }
